[gd_scene load_steps=29 format=3 uid="uid://c1hc4wtvynomr"]

[ext_resource type="Script" path="res://Enemies/fighter.gd" id="1_40ght"]
[ext_resource type="PackedScene" uid="uid://bj7xa1134mjke" path="res://scenes/killzone.tscn" id="2_3uupe"]
[ext_resource type="Texture2D" uid="uid://dcom7i8edl1m7" path="res://assets/Foozle_2DS0014_Void_FleetPack_3/Foozle_2DS0014_Void_EnemyFleet_3/Nautolan/Destruction/PNGs/Nautolan Ship - Fighter.png" id="2_tvo50"]
[ext_resource type="Texture2D" uid="uid://dkvwo7hhqk7g5" path="res://assets/Foozle_2DS0014_Void_FleetPack_3/Foozle_2DS0014_Void_EnemyFleet_3/Nautolan/Weapons/PNGs/Nautolan Ship - Fighter - Weapons.png" id="3_vqy3m"]
[ext_resource type="PackedScene" uid="uid://dvi75pd2753wh" path="res://scenes/hurtbox.tscn" id="3_xbxdq"]
[ext_resource type="AudioStream" uid="uid://d28sxpow5q1fy" path="res://assets/Game Sounds/ShipHit.wav" id="6_pfaao"]
[ext_resource type="AudioStream" uid="uid://dyh8d6ciblimf" path="res://assets/Game Sounds/ShipExplosion.wav" id="7_pfatn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e78a6"]
atlas = ExtResource("2_tvo50")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikf2c"]
atlas = ExtResource("2_tvo50")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ly0b"]
atlas = ExtResource("2_tvo50")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvt3l"]
atlas = ExtResource("2_tvo50")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_38qfj"]
atlas = ExtResource("2_tvo50")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_epui0"]
atlas = ExtResource("2_tvo50")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_toy7j"]
atlas = ExtResource("2_tvo50")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cujv"]
atlas = ExtResource("2_tvo50")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2rsu"]
atlas = ExtResource("2_tvo50")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_06f2p"]
atlas = ExtResource("2_tvo50")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbljg"]
atlas = ExtResource("2_tvo50")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_87b7m"]
atlas = ExtResource("3_vqy3m")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5oit"]
atlas = ExtResource("3_vqy3m")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_48k13"]
atlas = ExtResource("3_vqy3m")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_15kwj"]
atlas = ExtResource("3_vqy3m")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg1dv"]
atlas = ExtResource("3_vqy3m")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghr77"]
atlas = ExtResource("3_vqy3m")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_utup0"]
atlas = ExtResource("3_vqy3m")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_otu0p"]
atlas = ExtResource("3_vqy3m")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c2mt"]
atlas = ExtResource("3_vqy3m")
region = Rect2(512, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tvf25"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e78a6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikf2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ly0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvt3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38qfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epui0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_toy7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cujv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2rsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06f2p")
}],
"loop": false,
"name": &"destruction",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbljg")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_87b7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5oit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48k13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15kwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg1dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghr77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utup0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otu0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8c2mt")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[node name="Fighter" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_40ght")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tvf25")
animation = &"shoot"
autoplay = "default"
flip_v = true

[node name="killzone" parent="." instance=ExtResource("2_3uupe")]
rotation = -3.18126
collision_layer = 10

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="killzone"]
rotation = -0.0261602
polygon = PackedVector2Array(5.1319, 13.3665, 5.5, 7.5, 15.8667, 2.54919, 5.30627, -6.77078, -5, -7.5, -16.064, 0.444312, -6.48034, 7.08909, -6.84211, 12.5772)

[node name="Hurtbox" parent="." instance=ExtResource("3_xbxdq")]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
rotation = -0.0261602
polygon = PackedVector2Array(5.1319, 13.3665, 5.5, 7.5, 15.8667, 2.54919, 5.30627, -6.77078, -5, -7.5, -16.064, 0.444312, -6.48034, 7.08909, -6.84211, 12.5772)

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)
collision_mask = 34

[node name="RayCastLeft" type="RayCast2D" parent="." groups=["enemy"]]
target_position = Vector2(-15, 0)
collision_mask = 34

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(10, 20)

[node name="Muzzle2" type="Marker2D" parent="."]
position = Vector2(-10, 20)

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_pfaao")

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_pfatn")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
